--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,54 @@
-body {background: grey}
+body {background: grey;
+	font-size:22px ;
+	background-image: url(../images/paul-gilmore-600049-unsplash.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+html {
+	min-height: 100%;
+}
+h4 {
+	color: steelblue;
+}
 p {color: white}
+img {
+  float: left;
+  padding-top: 121px;
+  width:700px;height:700px;
+
+}
+.strong {
+	color: salmon;
+}
+.space {
+	text-align: justify;
+	padding-top: 840px;
+	padding-bottom: 40px; 
+	width:750px;
+	float: right;
+
+  	position: relative;
+  	left: -30%; /* or right 50% */
+}
+#spac {
+	padding-top: 1px;
+	text-align: justify;
+	float: right;
+	text-align: left;
+	width: 400px;
+}
+.orange {
+	color: red;
+	font-weight: normal;
+}
+.white {
+	color:#ffffff;
+}
+.yellow {
+	color:#000000;
+}
+
+.coloredlinks a {
+	font-weight: bold;
+  color: gold;
+}
