Added a little more styling.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,9 @@ body {background: grey;
 	font-size:22px ;
 	background-image: url(../images/paul-gilmore-600049-unsplash.jpg);
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	background-size: cover;
+	font-family: sans-serif;
 }
 html {
 	min-height: 100%;
@@ -10,12 +12,28 @@ html {
 h4 {
 	color: steelblue;
 }
+
+#p {
+	text-align: center;
+	border: 1px black;
+	margin: 1px;
+	background-color: black;
+	background-position: relative;
+	position: relative;
+	left:0px;
+	top:800px;
+	max-height: 100px;
+
+
+	
+}
+
 p {color: white}
 img {
   float: left;
   padding-top: 121px;
   width:700px;height:700px;
-
+  
 }
 .strong {
 	color: salmon;
@@ -51,4 +69,9 @@ img {
 .coloredlinks a {
 	font-weight: bold;
   color: gold;
+}
+
+.vl {
+	border-left: 4000px solid #133D9A;
+    height: 6px;
 }
